test/elaboration/bad/typeclass_method_redeclaration.mle
class H 'a { h : 'a -> int }
class I 'a { h : 'a -> int }